--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="volume_cannot_be_0_at_ringer_mode">Volume cannot be 0 at ringer mode!</string>
     <string name="select_a_rongtone">Select a Rongtone!</string>
     <string name="select_volume">Select Volume:</string>
+    <string name="uninstall">Uninstall the app</string>
     <string-array name="profile_name">
         <item>Silent</item>
         <item>Vibrate Mode</item>
